# rmbr

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  Cargo.toml  LICENSE  README.md  drizzle.config.ts  oxlint.json  package.json  tsconfig.json
.github/workflows/: docs.yml
.vitepress/: config.ts
docs/: index.md
docs/guide/: architecture.md  cli-usage.md  contributing.md  core-concepts.md  enrichment.md  faq.md  getting-started.md  mcp-setup.md
docs/modules/: goals.md  kudos.md  slack.md  study.md  tags.md  til.md  todo.md
src/: cli.ts  main.rs  mcp.ts  registry.ts
src/cli/: config.rs  goal.rs  kudo.rs  mod.rs  tag.rs  til.rs  todo.rs
src/core/: config.ts  date-utils.ts  db.ts  drizzle.ts  errors.ts  migrator.ts  module-contract.ts  output.ts  prompts.ts  registry.ts  types.ts
src/db/: config.rs  goal.rs  kudo.rs  mod.rs  query.rs  repository.rs  tag.rs  til.rs  todo.rs
src/models/: config.rs  goal.rs  kudo.rs  mod.rs  tag.rs  til.rs  todo.rs
src/reports/: mod.rs  retro.rs  review.rs  standup.rs
src/shared/: enrichment.ts  json-array.ts  list-with-pagination.ts  pagination.ts  soft-delete.ts  tool-args.ts  tool-result.ts  transition.ts  type-guards.ts  validation.ts
src/tui/: mod.rs  testutil.rs
tests/core/: config.test.ts  date-utils.test.ts  errors.test.ts  migrator.test.ts  output.test.ts  registry.test.ts
tests/helpers/: db.ts  fixtures.ts  tool-result.ts
tests/shared/: enrichment.test.ts  json-array.test.ts  list-with-pagination.test.ts  soft-delete.test.ts  tool-args.test.ts  transition.test.ts  type-guards.test.ts  (+1 more)
(+164 files in other folders)
